add home button

--- a/app/src/main/res/layout/activity_news_details.xml
+++ b/app/src/main/res/layout/activity_news_details.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".newsDetails">
@@ -36,7 +35,7 @@
       android:layout_width="356dp"
       android:layout_height="208dp"
       android:layout_marginTop="4dp"
-      android:text="TextView"
+      android:text="news detail content"
       android:textColor="#000000"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.49"
@@ -57,5 +56,18 @@
       app:layout_constraintHorizontal_bias="0.425"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/button" />
+
+  <Button
+      android:id="@+id/button2"
+      android:layout_width="70dp"
+      android:layout_height="33dp"
+      android:autoSizeMaxTextSize="16dp"
+      android:backgroundTint="#3F51B5"
+      android:text="Home"
+      android:textSize="10sp"
+      app:cornerRadius="20sp"
+      tools:cornerRadius="20sp"
+      tools:layout_editor_absoluteX="48dp"
+      tools:layout_editor_absoluteY="30dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
